# super_agent_v2

./: .gitignore  LOCAL_MODEL_SETUP.md  README.md  main.py  pyproject.toml
audio/asr/: whisper_asr.py
audio/tts/: cosyvoice_tts.py
avatar/heygem/: driver.py
client/: web.py
config/: settings.example.yaml
core/: config.py  env_loader.py  models.py  utils.py
local_models/: .env.example  .env.windows.example  DEPLOY_STEPS.md  WEIGHT_CHECKLIST.md  social-auto-upload
local_models/heygem/: README_LOCAL_MODELS.txt
script/extractor/: extractor.py
script/rewriter/: rewriter.py
scripts/: bootstrap_env.sh  check_model_weights.sh  download_local_models.sh  preflight_check.sh  run_full_validation.sh
tools/: asr_wrapper.py  avatar_wrapper.py  cosyvoice_cmd_adapter.py  heygem_cmd_adapter.py  rewriter_deepseek_wrapper.py  rewriter_wrapper.py  social_upload_wrapper.py  tts_wrapper.py
uploader/multi_platform/: publisher.py
video/bgm/: mixer.py
video/ffmpeg/: pipeline.py
video/subtitle/: generator.py
workflow/: pipeline.py
